--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -201,12 +201,12 @@ $basic-yellow-level-1: #ffff00;
 $basic-yellow-level-2: #e2e200;
 
 // Light/Dark mode (general)
-$mode-base-background-color-light: white;
-$mode-base-background-color-dark: $gray-dark-level-8;
-$mode-base-primary-text-color-light: black;
-$mode-base-primary-text-color-dark: $tinted-gray-light-level-1;
-$mode-base-secondary-text-color-light: $gray-dark-level-10;
-$mode-base-secondary-text-color-dark: $tinted-gray-light-level-4;
+$mode-common-background-color-light: white;
+$mode-common-background-color-dark: $gray-dark-level-8;
+$mode-common-primary-text-color-light: black;
+$mode-common-primary-text-color-dark: $tinted-gray-light-level-1;
+$mode-common-secondary-text-color-light: $gray-dark-level-10;
+$mode-common-secondary-text-color-dark: $tinted-gray-light-level-4;
 $mode-backend-errors-text-color-light: $basic-red-level-1;
 $mode-backend-errors-text-color-dark: $fiery-red-level-1;
 $mode-char-count-limit-reached-text-color-light: $mode-backend-errors-text-color-light;
@@ -217,16 +217,16 @@ $mode-blurred-background-opacity-light: 0.8;
 $mode-blurred-background-opacity-dark: 0.6;
 $mode-click-to-close-blurred-background-opacity-light: 0.6;
 $mode-click-to-close-blurred-background-opacity-dark: 0.4;
-$mode-base-icon-button-text-color-light: $gray-level-4;
-$mode-base-icon-button-text-color-dark: $gray-level-6;
-$mode-base-icon-button-hover-text-color-light: $gray-dark-level-5;
-$mode-base-icon-button-hover-text-color-dark: $gray-level-1;
+$mode-common-icon-button-text-color-light: $gray-level-4;
+$mode-common-icon-button-text-color-dark: $gray-level-6;
+$mode-common-icon-button-hover-text-color-light: $gray-dark-level-5;
+$mode-common-icon-button-hover-text-color-dark: $gray-level-1;
 $mode-custom-checkbox-border-color-light: black;
 $mode-custom-checkbox-border-color-dark: $gray-level-1;
-$mode-custom-checkbox-background-color-light: $mode-base-background-color-light;
-$mode-custom-checkbox-background-color-dark: $mode-base-background-color-dark;
-$mode-custom-checkmark-text-color-light: $mode-base-primary-text-color-light;
-$mode-custom-checkmark-text-color-dark: $mode-base-primary-text-color-dark;
+$mode-custom-checkbox-background-color-light: $mode-common-background-color-light;
+$mode-custom-checkbox-background-color-dark: $mode-common-background-color-dark;
+$mode-custom-checkmark-text-color-light: $mode-common-primary-text-color-light;
+$mode-custom-checkmark-text-color-dark: $mode-common-primary-text-color-dark;
 $mode-toggle-switch-on-text-color-light: white;
 $mode-toggle-switch-on-text-color-dark: white;
 $mode-toggle-switch-on-circle-background-color-light: white;
@@ -240,10 +240,10 @@ $mode-toggle-switch-off-circle-background-color-light: $mode-toggle-switch-on-ci
 $mode-toggle-switch-off-circle-background-color-dark: $mode-toggle-switch-on-circle-background-color-dark; // Equivalent on variable is bellow with Themes + Light/Dark mode
 $mode-universal-text-grayed-out-text-color-light: $gray-level-4;
 $mode-universal-text-grayed-out-text-color-dark: $gray-level-6;
-$mode-base-form-input-border-color-light: $gray-level-5;
-$mode-base-form-input-border-color-dark: black;
-$mode-base-form-input-background-color-light: $gray-light-level-5;
-$mode-base-form-input-background-color-dark: $gray-dark-level-2;
+$mode-common-form-input-border-color-light: $gray-level-5;
+$mode-common-form-input-border-color-dark: black;
+$mode-common-form-input-background-color-light: $gray-light-level-5;
+$mode-common-form-input-background-color-dark: $gray-dark-level-2;
 $mode-list-row-border-color-light: $gray-level-2;
 $mode-list-row-border-color-dark: $gray-level-6;
 $mode-list-row-hover-background-color-light: $gray-light-level-2;
@@ -252,11 +252,11 @@ $mode-list-row-selected-background-color-light: $gray-light-level-6;
 $mode-list-row-selected-background-color-dark: $gray-dark-level-4;
 $mode-list-header-box-shadow-light: 0 1px 0 $mode-list-row-border-color-light; // Must be bellow $mode-list-row-border-color-light
 $mode-list-header-box-shadow-dark: 0 1px 0 $mode-list-row-border-color-dark; // Must be bellow $mode-list-row-border-color-dark
-$mode-list-header-background-color-light: $mode-base-background-color-light;
-$mode-list-header-background-color-dark: $mode-base-background-color-dark;
+$mode-list-header-background-color-light: $mode-common-background-color-light;
+$mode-list-header-background-color-dark: $mode-common-background-color-dark;
 // Light/Dark mode (specific)
-$mode-navbar-hamburger-dropdown-background-color-light: $mode-base-background-color-light;
-$mode-navbar-hamburger-dropdown-background-color-dark: $mode-base-background-color-dark;
+$mode-navbar-hamburger-dropdown-background-color-light: $mode-common-background-color-light;
+$mode-navbar-hamburger-dropdown-background-color-dark: $mode-common-background-color-dark;
 $mode-navbar-hamburger-dropdown-option-border-color-light: $gray-level-1;
 $mode-navbar-hamburger-dropdown-option-border-color-dark: $gray-level-9;
 $mode-navbar-hamburger-dropdown-option-hover-background-color-light: $gray-light-level-2;
@@ -267,8 +267,8 @@ $mode-navbar-hamburger-dropdown-option-name-text-color-light: $basic-blue-level-
 $mode-navbar-hamburger-dropdown-option-name-text-color-dark: $cyan-blue-level-1;
 $mode-navbar-hamburger-dropdown-option-icon-text-color-light: $gray-dark-level-1;
 $mode-navbar-hamburger-dropdown-option-icon-text-color-dark: $gray-level-7;
-$mode-account-sidebar-modal-background-color-light: $mode-base-background-color-light;
-$mode-account-sidebar-modal-background-color-dark: $mode-base-background-color-dark;
+$mode-account-sidebar-modal-background-color-light: $mode-common-background-color-light;
+$mode-account-sidebar-modal-background-color-dark: $mode-common-background-color-dark;
 $mode-account-sidebar-horizontal-dividing-line-border-color-light: $gray-light-level-11;
 $mode-account-sidebar-horizontal-dividing-line-border-color-dark: $gray-level-7;
 $mode-account-sidebar-logout-button-border-color-light: $mode-account-sidebar-horizontal-dividing-line-border-color-light;
@@ -289,26 +289,26 @@ $mode-top-bar-border-color-light: black;
 $mode-top-bar-border-color-dark: black;
 $mode-top-bar-background-color-light: $gray-light-level-5;
 $mode-top-bar-background-color-dark: $gray-dark-level-12;
-$mode-top-bar-button-border-color-light: $mode-base-primary-text-color-light;
+$mode-top-bar-button-border-color-light: $mode-common-primary-text-color-light;
 $mode-top-bar-button-border-color-dark: $gray-level-1;
-$mode-top-bar-button-background-color-light: $mode-base-background-color-light;
+$mode-top-bar-button-background-color-light: $mode-common-background-color-light;
 $mode-top-bar-button-background-color-dark: $gray-dark-level-5;
-$mode-top-bar-button-text-color-light: $mode-base-primary-text-color-light;
-$mode-top-bar-button-text-color-dark: $mode-base-primary-text-color-dark;
-$mode-top-bar-new-item-tutorial-arrow-background-color-light: $mode-base-primary-text-color-light;
-$mode-top-bar-new-item-tutorial-arrow-background-color-dark: $mode-base-primary-text-color-dark;
-$mode-create-item-sidebar-background-color-light: $mode-base-background-color-light;
-$mode-create-item-sidebar-background-color-dark: $mode-base-background-color-dark;
+$mode-top-bar-button-text-color-light: $mode-common-primary-text-color-light;
+$mode-top-bar-button-text-color-dark: $mode-common-primary-text-color-dark;
+$mode-top-bar-new-item-tutorial-arrow-background-color-light: $mode-common-primary-text-color-light;
+$mode-top-bar-new-item-tutorial-arrow-background-color-dark: $mode-common-primary-text-color-dark;
+$mode-create-item-sidebar-background-color-light: $mode-common-background-color-light;
+$mode-create-item-sidebar-background-color-dark: $mode-common-background-color-dark;
 $mode-create-item-sidebar-form-disabled-background-color-light: $mode-create-item-sidebar-background-color-light;
 $mode-create-item-sidebar-form-disabled-background-color-dark: $mode-create-item-sidebar-background-color-dark;
 $mode-create-item-sidebar-form-disabled-text-color-light: $gray-light-level-10;
 $mode-create-item-sidebar-form-disabled-text-color-dark: $gray-level-6;
-$mode-top-bar-search-bar-background-color-light: $mode-base-background-color-light;
+$mode-top-bar-search-bar-background-color-light: $mode-common-background-color-light;
 $mode-top-bar-search-bar-background-color-dark: $gray-dark-level-6;
-$mode-top-bar-search-bar-text-color-light: $mode-base-primary-text-color-light;
-$mode-top-bar-search-bar-text-color-dark: $mode-base-primary-text-color-dark;
-$mode-delete-modal-background-color-light: $mode-base-background-color-light;
-$mode-delete-modal-background-color-dark: $mode-base-background-color-dark;
+$mode-top-bar-search-bar-text-color-light: $mode-common-primary-text-color-light;
+$mode-top-bar-search-bar-text-color-dark: $mode-common-primary-text-color-dark;
+$mode-delete-modal-background-color-light: $mode-common-background-color-light;
+$mode-delete-modal-background-color-dark: $mode-common-background-color-dark;
 $mode-delete-modal-delete-button-background-color-light: $mode-account-modal-delete-account-form-delete-button-background-color-light;
 $mode-delete-modal-delete-button-background-color-dark: $mode-account-modal-delete-account-form-delete-button-background-color-dark;
 $mode-delete-modal-delete-button-hover-background-color-light: $mode-account-modal-delete-account-form-delete-button-hover-background-color-light;
@@ -341,8 +341,8 @@ $mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-light
 $mode-item-view-list-sidebar-expand-minimize-button-hover-background-color-dark: $gray-dark-level-12;
 $mode-item-view-form-input-border-color-light: black;
 $mode-item-view-form-input-border-color-dark: black;
-$mode-item-view-form-input-background-color-light: $mode-base-background-color-light;
-$mode-item-view-form-input-background-color-dark: $mode-base-background-color-dark;
+$mode-item-view-form-input-background-color-light: $mode-common-background-color-light;
+$mode-item-view-form-input-background-color-dark: $mode-common-background-color-dark;
 $mode-item-view-form-disabled-background-color-light: $mode-top-bar-background-color-light;
 $mode-item-view-form-disabled-background-color-dark: $mode-top-bar-background-color-dark;
 $mode-item-view-form-disabled-text-color-light: $mode-create-item-sidebar-form-disabled-text-color-light;
@@ -353,20 +353,20 @@ $mode-item-view-form-cancel-button-hover-background-color-light: $gray-light-lev
 $mode-item-view-form-cancel-button-hover-background-color-dark: $gray-dark-level-3;
 $mode-item-view-comment-box-individual-comment-icon-button-text-color-light: $gray-level-6;
 $mode-item-view-comment-box-individual-comment-icon-button-text-color-dark: $gray-level-4;
-$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-light: $mode-base-primary-text-color-light;
-$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-dark: $mode-base-primary-text-color-dark;
+$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-light: $mode-common-primary-text-color-light;
+$mode-item-view-comment-box-individual-comment-icon-button-hover-text-color-dark: $mode-common-primary-text-color-dark;
 
 // Themes
 $theme-brighter-border-background-color-blue-turkish: $turkish-blue-level-3;
-$theme-base-border-background-color-blue-turkish: $turkish-blue-level-4;
+$theme-standard-border-background-color-blue-turkish: $turkish-blue-level-4;
 $theme-brighter-border-background-color-blue-queen: $queen-blue-light-level-1;
-$theme-base-border-background-color-blue-queen: $queen-blue-dark-level-1;
+$theme-standard-border-background-color-blue-queen: $queen-blue-dark-level-1;
 $theme-brighter-border-background-color-blue-sky: $sky-blue-light-level-4;
-$theme-base-border-background-color-blue-sky: $sky-blue-level-5;
+$theme-standard-border-background-color-blue-sky: $sky-blue-level-5;
 $theme-brighter-border-background-color-blue-turquoise: $turquoise-blue-level-2;
-$theme-base-border-background-color-blue-turquoise: $maganese-blue-level-5;
+$theme-standard-border-background-color-blue-turquoise: $maganese-blue-level-5;
 $theme-brighter-border-background-color-purple-rain: $rain-purple-light-level-4;
-$theme-base-border-background-color-purple-rain: $rain-purple-level-6;
+$theme-standard-border-background-color-purple-rain: $rain-purple-level-6;
 // Themes + Light/Dark mode
 $theme-mode-blue-turkish-toggle-switch-on-border-background-color-light: $turkish-blue-level-2;
 $theme-mode-blue-turkish-toggle-switch-on-border-background-color-dark: $lake-michigan-blue-level-6;
@@ -410,7 +410,7 @@ $theme-mode-purple-rain-text-color-light: $rain-purple-level-3;
 $theme-mode-purple-rain-text-color-dark: $candy-purple-level-2;
 // Theme (default)
 $default-theme-brighter-border-background-color: $theme-brighter-border-background-color-blue-turkish;
-$default-theme-base-border-background-color: $theme-base-border-background-color-blue-turkish;
+$default-theme-standard-border-background-color: $theme-standard-border-background-color-blue-turkish;
 $default-theme-mode-toggle-switch-on-border-background-color: $theme-mode-blue-turkish-toggle-switch-on-border-background-color-light;
 $default-theme-mode-new-item-tutorial-border-text-color: $theme-mode-blue-turkish-new-item-tutorial-border-text-color-light;
 $default-theme-mode-focus-border-color: $theme-mode-blue-turkish-focus-border-color-light;
@@ -517,17 +517,17 @@ $item-view-item-box-char-counter-margin: 5px 2px 4px 0px;
 $form-input-text-border-width: 1px;
 $navbar-breadcrumb-border-width: 2px;
 $navbar-hamburger-border-width: 3px;
-$base-sidebar-border-width: 3px;
-$base-modal-border-width: 3px;
+$common-sidebar-border-width: 3px;
+$common-modal-border-width: 3px;
 $account-modal-border-width: 3px;
 $account-modal-toggle-switch-border-width: 3px;
 $account-sidebar-appearance-theme-button-border-width: 1px;
 $top-bar-border-width: 1px;
-$top-bar-base-button-border-width: 1px;
-$top-bar-tutorial-button-border-width: $top-bar-base-button-border-width + 1;
+$top-bar-common-button-border-width: 1px;
+$top-bar-tutorial-button-border-width: $top-bar-common-button-border-width + 1;
 $top-bar-clicked-dropdown-button-border-width: 3px;
 $top-bar-clicked-dropdown-button-border-width-difference: $top-bar-clicked-dropdown-button-border-width -
-	$top-bar-base-button-border-width;
+	$top-bar-common-button-border-width;
 $top-bar-search-bar-border-width: 2px;
 $top-bar-search-bar-focus-border-width: 3px;
 $edit-item-name-input-border-width: 2px;
@@ -536,10 +536,10 @@ $item-view-list-sidebar-border-width: 2px;
 //==============
 // Border-radius
 //==============
-$base-buttton-border-radius: 10px;
+$common-buttton-border-radius: 10px;
 $navbar-breadcrumb-round-border-radius: 12px;
 $navbar-hamburger-border-radius: 10px;
-$base-sidebar-border-radius: 25px;
+$common-sidebar-border-radius: 25px;
 $account-modal-border-radius: 15px;
 $top-bar-buttton-border-radius: 5px;
 $form-input-border-radius: 5px;
@@ -559,8 +559,8 @@ $edit-item-name-input-padding: 4px;
 //======
 // Text
 //======
-$base-font-size: 15px;
-$slightly-larger-font-size: $base-font-size + 1;
+$common-font-size: 15px;
+$slightly-larger-font-size: $common-font-size + 1;
 $navbar-button-font-size: 18px;
 $account-sidebar-account-name-font-size: 18px;
 $account-sidebar-account-info-font-size: 15px;
