--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
@@ -10,7 +10,7 @@
 	// ...to make modal resize (using js) look less jumpy
 	height: 90vh;
 	width: 100%;
-	font-size: v.$base-font-size;
+	font-size: v.$common-font-size;
 	font-family: Arial, Helvetica, sans-serif;
 	overflow-y: auto;
 	overflow-x: auto;
@@ -34,7 +34,7 @@
 	}
 
 	.list-table__row--non-header {
-		color: v.$mode-base-secondary-text-color-light;
+		color: v.$mode-common-secondary-text-color-light;
 	}
 
 	.list-table__row--empty {
@@ -51,7 +51,7 @@
 		// Used box shadow since the header row being sticky with
 		// ...background-color applied keeps the bottom-border from appearing
 		box-shadow: v.$mode-list-header-box-shadow-light;
-		background-color: v.$mode-base-background-color-light;
+		background-color: v.$mode-common-background-color-light;
 		width: 300px;
 	}
 
